alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ div img {
 
 p {
   margin: 10px;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 #main-game {
@@ -52,44 +52,44 @@ p {
 
 #end-game {
   height: 100px;
-  font-size: 25px;
-  font-family: 'Permanent Marker', cursive;
-  text-align: center;
+  /* font-family: 'Permanent Marker', cursive; */
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: left;
 }
 
 #user-win {
   display: block;
   position: absolute;
-  width: 50%;
+  width: 70%;
   visibility: hidden;
-  text-align: center;
+  text-align: left;
   color: green;
-  font-size: xx-large;
+  /* font-size: xx-large; */
 }
 
 #user-lost {
   display: block;
   position: absolute;
-  width: 50%;
+  width: 70%;
   visibility: hidden;
-  text-align: center;
+  text-align: left;
   color: red;
 }
 
 #invalidLetter {
   display: block;
   position: absolute;
-  width: 50%;
+  width: 70%;
   visibility: hidden;
-  text-align: center;
+  text-align: left;
   color: red;
 }
 
 #duplicateLetter {
   display: block;
   position: absolute;
-  width: 50%;
+  width: 70%;
   visibility: hidden;
-  text-align: center;
+  text-align: left;
   color: red;
 }
